--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   clipboard: ^0.1.3
   lottie: ^2.6.0
   url_launcher: ^6.3.1
+  excel: ^2.0.1
 
 
 dev_dependencies:
@@ -51,5 +52,6 @@ flutter:
     - assets/lottie/download_animation.json
     - assets/lottie/check.json
     - assets/bd_local/BD_TEST.xlsx
+    - assets/bd_local/tabla_zonas.xlsx
 
 
